# simple-log-formatter

./: Cargo.toml
.github/workflows/: rust.yml
src/: lib.rs
